--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Social links profile</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="block">
+      <div class="inner-block">
+        <img src="avatar-jessica.jpeg" alt="prof-pic" class="profile-pic" />
+        <a class="jessica">Jessica Randall</a>
+        <a class="london">London, United Kingdom</a>
+        <p class="front">"Front-end developer and avid reader"</p>
+        <button class="GitHub">GitHub</button>
+        <div>
+          <button class="Frontend">Frontend Mentor</button>
+        </div>
+        <div>
+          <button class="Linked">LinkedIn</button>
+        </div>
+        <div>
+          <button class="Twitter">Twitter</button>
+        </div>
+        <div>
+          <button class="Insta">Instagram</button>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
