--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
         <a class="jessica">Jessica Randall</a>
         <a class="london">London, United Kingdom</a>
         <p class="front">"Front-end developer and avid reader"</p>
-        <button class="GitHub">GitHub</button>
+        <button class="button GitHub">GitHub</button>
         <div>
-          <button class="Frontend">Frontend Mentor</button>
+          <button class="button">Frontend Mentor</button>
         </div>
         <div>
-          <button class="Linked">LinkedIn</button>
+          <button class="button">LinkedIn</button>
         </div>
         <div>
-          <button class="Twitter">Twitter</button>
+          <button class=" button">Twitter</button>
         </div>
         <div>
-          <button class="Insta">Instagram</button>
+          <button class="button">Instagram</button>
         </div>
       </div>
     </div>
